<resources>
    <string name="app_name">ChitChat</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_acount">Create Acount</string>
    <string name="logout">LogOut</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_chitchat">Welcome to Chitchat</string>
    <string name="already_have_account">Already have account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_names">Display Name</string>
    <string name="hey_there_i_m_using_chit_chat_app">Hey There, I\'m using Chit Chat app</string>
    <string name="change_image">change image</string>
    <string name="change_status">change status</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="user_defult_status">User Defult Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="current_user_status">Current user status</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="last_seen">Last Seen</string>
    <string name="enter_message">Enter Message...</string>
</resources>
