<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingsImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/settingsDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/display_name"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <Button
        android:id="@+id/settingsImageBtn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/change_image"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/settingsStatusBtn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/change_status"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/settingsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsDisplayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hey_there_i_m_using_chit_chat_app"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>