<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_to_chitchat"
        android:textSize="20sp" />

    <Button
        android:id="@+id/startRegButton"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/startLoginBtn"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/already_have_account"
        android:textColor="#ffffff" />
</RelativeLayout>